# Aiffel

./: .gitignore  Quest.md  README.md  requirements.txt
AIFFELTHON/THON1/: eda.ipynb  submission_filled.csv  train.ipynb
MLOPS/Quest_0729/: Dockerfile
MLOPS/Quest_0731/: Dockerfile  main.py  requirements.txt
MLOPS/Quest_0801/study/app/: Dockerfile  pyproject.toml
MLOPS/Quest_0801/study/app/src/: main.py  settings.py
MLOPS/Quest_0801/study/app/src/model/: models.py  router.py  schemas.py  vocab.py
MainQuest/MainQuest1/: MainQuest.ipynb  README.md  chatbot.py  requirements.txt  train.py  translator.py
Quests/: README.md
Quests/Quest10_20240702/: PRT.md
Quests/Quest10_20240802/: Project - 복사본.ipynb  Project.ipynb  Project_trial.ipynb  README.md  cutmix_test.ipynb  mixup_test.ipynb  mixup_test_50epoch.ipynb  test.ipynb
Quests/Quest11_20240704/: PRT.md  Quest.ipynb  README.md  cam.py  grad_cam.py
Quests/Quest12_20240708/: PRT.md  Quest.ipynb
Quests/Quest13_20240710/: PRT.md  Quest.ipynb  README.md  study.ipynb
Quests/Quest14_20240712/: README.md
Quests/Quest15_20240716/: Quest.ipynb  README.md
Quests/Quest16_20240718/: Quests.ipynb
Quests/Quest17_20240822/: Quest1.ipynb  Quest3.ipynb
Quests/Quest1_20240520/: 프로젝트_기초다지기_rs8.ipynb
Quests/Quest2_20240528/: 7장코드.ipynb  PRT.md
Quests/Quest3_20240529/: Kaggle_competition.ipynb  README.md  submission_lgbm_RMSLE_try1.csv  submission_lgbm_RMSLE_try3.csv  submission_lgbm_RMSLE_try4.csv  나의 첫 번째 캐글 경진대회, 무작정 따라해보기.ipynb
Quests/Quest4_20240604/: PRT.md  Quest_code.ipynb  (+3 more)
ShareValue/: README.md
(+60 files in other folders)
