[tool.poetry]
name = "naver-sa"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^3.0.0"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
torch = "^2.4.0"
uvicorn = "^0.30.4"
pydantic-settings = "^2.4.0"
kiwipiepy = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
